# JGIT

./: pyproject.toml
jgit/: base.py  cli.py  data.py
