[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jgit"
version = "1.0.0"
description = "A simple Git implementation in Python"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[project.scripts]
jgit = "jgit.cli:main"
